Ranking関連の画面遷移とstring.xmlを追加

--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="コンテンツ詳細"
+        android:onClick="contentsDetailButton"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/daily_tv_ranking_title"
+        android:onClick="dailyRankingButton"/>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/weekly_tv_ranking_title"
+        android:onClick="weeklyTvRankingButton"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/video_ranking_title"
+        android:onClick="videoRankingButton"/>
 </LinearLayout>
