--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#000000">
+    <RelativeLayout
+        android:id="@+id/record_list_main_layout_ll1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/record_list_main_layout_tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text="8/31(木) 21:00"/>
+        <TextView
+            android:layout_below="@id/record_list_main_layout_tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:text="BONES シーズン11 #8 「感謝祭の秘密」"/>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFFFFF"/>
 </LinearLayout>
