--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/cannel_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/cannel_list_main_layout.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="120dp"
+       android:text="チャンネルリスト画面"
+       android:textColor="@color/colorAccent"
+       android:gravity="center"
+       android:id="@+id/textView" />
+
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="戻る"
+       android:id="@+id/btn_back"
+       android:layout_below="@+id/textView"
+       />
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="チャンネル詳細画面へ"
+       android:layout_below="@+id/btn_back"
+       android:id="@+id/btn_channel_info"/>
+
+
+</RelativeLayout>
