--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="ここはチャンネル編集メニュー画面"
+        android:gravity="center"
+        android:id="@+id/textView" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="戻る"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/btn_back" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="+ボタン"
+        android:id="@+id/btn_add"
+        android:layout_below="@+id/btn_back"
+        android:layout_centerHorizontal="true" />
+
+
+</RelativeLayout>
