--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_result_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_result_main_layout.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/layout_titleBar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="#ff0000">
+
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center"
+            android:maxLines="1"
+            android:text="キーワード検索"
+            android:textColor="#ffffffff"
+            android:textSize="20dp" />
+
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="キーワード検索＞結果（dTV、dアニメ）"/>
+
+    <Button
+        android:id="@+id/bt_result1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="検索結果　内容１"/>
+    <Button
+        android:id="@+id/bt_result2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="検索結果　内容２"/>
+    <Button
+        android:id="@+id/bt_backTop2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="戻る"/>
 
 </LinearLayout>
