--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/layout_titleBar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="#ff0000">
+
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center"
+            android:maxLines="1"
+            android:text="キーワード検索"
+            android:textColor="#ffffffff"
+            android:textSize="20dp" />
+
+    </RelativeLayout>
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="キーワードを入力" />
+
+    <Button
+        android:id="@+id/bt_keyword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="履歴キーワード" />
+
+    <Button
+        android:id="@+id/bt_seeMore"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="もっと見る" />
+
+    <Button
+        android:id="@+id/bt_backHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="戻る" />
+
 
 </LinearLayout>
