--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/pop.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/pop.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/pop_iv"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@mipmap/ic_launcher"/>
@@ -327,6 +328,33 @@
                     android:textSize="20sp"
                     android:textColor="#FFFFFF"
                     android:text="お知らせ"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:paddingRight="10dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    android:text=">"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="#CCCCCC"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/pop_set"
+                android:layout_width="200dp"
+                android:layout_height="40dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20sp"
+                    android:textColor="#FFFFFF"
+                    android:text="設定"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
