--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/cannel_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/cannel_list_main_layout.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-   <TextView
+   <RelativeLayout
+       android:id="@+id/home_main_layout_title"
        android:layout_width="match_parent"
-       android:layout_height="120dp"
-       android:text="チャンネルリスト画面"
-       android:textColor="@color/colorAccent"
-       android:gravity="center"
-       android:id="@+id/textView" />
+       android:layout_height="40dp"
+       android:background="#FF0000">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerInParent="true"
+          android:text="チャンネルリスト画面"
+          android:textColor="#FFFFFF"
+          android:textStyle="bold"
+          android:textSize="15sp"/>
+   </RelativeLayout>
 
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="戻る"
        android:id="@+id/btn_back"
-       android:layout_below="@+id/textView"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="チャンネル詳細画面へ"
-       android:layout_below="@+id/btn_back"
        android:id="@+id/btn_channel_info"/>
 
 
-</RelativeLayout>
+</LinearLayout>
