--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/watch_video_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/watch_video_list_main_layout.xml
@@ -3,7 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FF0000">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="視聴中ビデオ"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/watch_video_list_main_layout_ll1"
         android:layout_width="wrap_content"
