--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item_demo.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item_demo.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/home_main_layout_item_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="80dp"
+        android:layout_height="80dp" />
     <TextView
         android:id="@+id/home_main_layout_item_tv"
         android:layout_width="wrap_content"
