--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -4,6 +4,19 @@
     android:layout_height="match_parent"
     android:background="#000000">
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FF0000">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="録画番組"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
+    </RelativeLayout>
+    <RelativeLayout
         android:id="@+id/record_list_main_layout_ll1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
