--- a/dTVTerminalApp/app/src/main/res/layout/video/layout/video_sub_genre_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/video/layout/video_sub_genre_main_layout.xml
@@ -6,6 +6,19 @@
     android:background="#000000">
 
     <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:background="#FF0000">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="ビデオサブジャンル"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textSize="15sp"/>
+</RelativeLayout>
+    <RelativeLayout
         android:layout_marginLeft="10dp"
         android:id="@+id/video_sub_genre_main_layout_rl1"
         android:layout_width="match_parent"
