--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controll_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controll_main_layout.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/layout_titleBar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ff0000">
+
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center"
+            android:maxLines="1"
+            android:text="REMOTE_CONTROL_START"
+            android:textColor="#ffffffff"
+            android:textSize="20dp" />
+
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="これはリモートコントロール画面"/>
 
 </LinearLayout>
