--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main_layout.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="クリープ一覧"
+            android:text="クリップ一覧"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="15sp"/>
