--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/pop.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/pop.xml
@@ -192,7 +192,7 @@
                     android:layout_marginLeft="10dp"
                     android:textSize="20sp"
                     android:textColor="#FFFFFF"
-                    android:text="クリープ"/>
+                    android:text="クリップ"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
