--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/daily_tv_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/daily_tv_ranking_main_layout.xml
@@ -4,6 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/home_main_layout_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FF0000">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="ランキング(今日のテレビランキング)"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
+    </RelativeLayout>
+
     <Button
         android:id="@+id/button7"
         android:layout_width="match_parent"
