--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/video_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/video_ranking_main_layout.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/home_main_layout_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FF0000">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="ランキング(ビデオランキング)"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="contentsDetailButton"
         android:text="コンテンツ詳細" />
