--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
@@ -1,21 +1,294 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
     <RelativeLayout
         android:id="@+id/home_main_layout_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#FF0000">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="＜"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="チャンネルリスト編集メニュー画面"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル2"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル3"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル4"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル5"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        >
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="10dp"
+            android:background="#0000FF"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="チャンネル6"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:background="#0000FF"
+            android:textColor="#FFFFFF"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            android:layout_alignParentBottom="true"
+            android:background="#CCCCCC"/>
+
     </RelativeLayout>
     <Button
         android:layout_width="match_parent"
