--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/news_details_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/news_details_main_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,10 +22,17 @@
             android:textSize="20dp" />
 
     </RelativeLayout>
+    <Button
+        android:id="@+id/Back4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="戻る"
+        android:textColor="#ffffffff"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="これはお知らせ詳細画面" />
+        android:text="これはお知らせ詳細画面"
+        android:textColor="#ffffffff"/>
 
 </LinearLayout>
