--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controll_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controll_main_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,9 +22,11 @@
             android:textSize="20dp" />
 
     </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="これはリモートコントロール画面"/>
+        android:text="これはリモートコントロール画面"
+        android:textColor="#ffffffff"/>
 
 </LinearLayout>
