--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_detail_main_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical">
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/layout_titleBar"
         android:layout_width="match_parent"
@@ -25,12 +27,14 @@
         android:id="@+id/back2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="戻る" />
+        android:text="戻る"
+        android:textColor="#ffffffff"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="これは設定詳細画面" />
+        android:text="これは設定詳細画面"
+        android:textColor="#ffffffff"/>
 
 
 </LinearLayout>
