--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical">
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/layout_titleBar"
         android:layout_width="match_parent"
@@ -25,14 +27,16 @@
         android:id="@+id/Back1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="戻る" />
+        android:text="戻る"
+        android:textColor="#ffffffff"/>
 
     <TextView
         android:id="@+id/tv_setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="設定画面へ" />
+        android:text="設定画面へ"
+        android:textColor="#ffffffff"/>
 
 
 </LinearLayout>
