--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/serch_top_main_layout.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,7 +28,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="キーワードを入力" />
+        android:hint="キーワードを入力"
+        android:textColor="#ffffffff"/>
 
     <Button
         android:id="@+id/bt_keyword"
