--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="＜"
+            android:id="@+id/back_key"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -58,6 +59,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel1"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
@@ -101,6 +103,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel2"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
@@ -144,6 +147,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel3"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
@@ -187,6 +191,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel4"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
@@ -230,6 +235,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel5"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
@@ -273,6 +279,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:text="+"
+            android:id="@+id/channel6"
             android:gravity="center"
             android:textSize="15sp"
             android:layout_marginRight="10dp"
